[package]
name = "subatomic-ng"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.85"
axum = { version = "0.8.1", features = ["macros", "multipart"] }
axum-server = { version = "0.7.1", features = ["tokio-rustls"] }
axum_thiserror = "0.1.0"
axum_typed_multipart = { version = "0.15.1", features = ["tempfile_3"] }
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive", "env"] }
color-eyre = "0.6.3"
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = "0.3.31"
object_store = { version = "0.11.2", features = ["serde", "serde_json", "aws"] }
paste = "1.0.15"
pgp = "0.14.2"
rand = "0.8.5"
rpm = "0.16.0"
rust-s3 = "0.35.1"
serde = { version = "1.0.217", features = ["derive"] }
surrealdb = "2.1.4"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter", "serde_json"] }
tracing-test = "0.2.5"
ulid = { version = "1.1.3", features = ["serde"] }
walkdir = "2.5.0"
